--- a/Backup/mainwindow.ui
+++ b/Backup/mainwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>SimpleXOR</class>
+ <widget class="QMainWindow" name="SimpleXOR">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -14,25 +14,28 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>500</y>
-      <width>83</width>
-      <height>29</height>
+      <x>30</x>
+      <y>50</y>
+      <width>271</width>
+      <height>28</height>
      </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>30</y>
-      <width>121</width>
+      <x>30</x>
+      <y>20</y>
+      <width>63</width>
       <height>20</height>
      </rect>
     </property>
@@ -40,58 +43,60 @@
      <string>Маска:</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>60</y>
-      <width>211</width>
-      <height>28</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_2">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>30</x>
       <y>150</y>
-      <width>331</width>
+      <width>211</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>Путь для сохранения результирующих файлов:</string>
+     <string>Путь для сохранения файлов:</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_2">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>30</x>
       <y>180</y>
-      <width>211</width>
+      <width>271</width>
       <height>28</height>
      </rect>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>110</y>
-      <width>181</width>
+      <x>30</x>
+      <y>100</y>
+      <width>171</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>Удалить входные файлы:</string>
+     <string>Удалить входные файлы</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="checkBox">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>110</y>
-      <width>21</width>
+      <x>220</x>
+      <y>100</y>
+      <width>93</width>
       <height>26</height>
      </rect>
     </property>
@@ -100,24 +105,30 @@
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>30</x>
       <y>230</y>
       <width>371</width>
-      <height>20</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Действия при повторении имени выходного файла:</string>
+     <string>Действие при повторении имени выходного файла:</string>
     </property>
    </widget>
    <widget class="QComboBox" name="comboBox">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>260</y>
-      <width>141</width>
+      <x>30</x>
+      <y>270</y>
+      <width>131</width>
       <height>28</height>
      </rect>
     </property>
@@ -133,24 +144,30 @@
     </item>
    </widget>
    <widget class="QLabel" name="label_5">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>310</y>
-      <width>231</width>
-      <height>20</height>
+      <x>30</x>
+      <y>320</y>
+      <width>181</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Периодичность срабатывания:</string>
+     <string>Периодичность запуска:</string>
     </property>
    </widget>
    <widget class="QComboBox" name="comboBox_2">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>340</y>
-      <width>141</width>
+      <x>30</x>
+      <y>360</y>
+      <width>151</width>
       <height>28</height>
      </rect>
     </property>
@@ -165,56 +182,62 @@
      </property>
     </item>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_3">
+   <widget class="QTimeEdit" name="timeEdit">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>340</y>
-      <width>131</width>
-      <height>28</height>
+      <x>240</x>
+      <y>360</y>
+      <width>118</width>
+      <height>29</height>
      </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit_4">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>420</y>
-      <width>211</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>390</y>
-      <width>331</width>
-      <height>20</height>
+      <x>30</x>
+      <y>410</y>
+      <width>181</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Значение скаляра (число от 0 до 255):</string>
+     <string>Значение скаляра (int):</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_7">
+   <widget class="QLineEdit" name="lineEdit_3">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>340</y>
-      <width>131</width>
-      <height>20</height>
+      <x>30</x>
+      <y>440</y>
+      <width>113</width>
+      <height>28</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>500</y>
+      <width>83</width>
+      <height>29</height>
      </rect>
     </property>
     <property name="text">
-     <string>Время в секундах:</string>
+     <string>PushButton</string>
     </property>
    </widget>
   </widget>
